--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 </head>
 
 <body>
-  <nav class="navbar fixed-top fs-6 navbar-expand-lg navbar-dark py-lg-3 py-sm-2">
-    <div class="container-fluid  py-lg-2 py-sm-2 ps-lg-3 ms-lg-4 me-1">
+  <nav class="navbar fixed-top fs-6 navbar-expand-lg py-lg-3 py-sm-2">
+    <div class="container-fluid py-lg-2 py-sm-2 ps-lg-3 ms-lg-4 me-1">
       <a class="navbar-brand" href="#"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
           xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="140" height="28" viewBox="0 0 1207.8 225.6"
           style="enable-background:new 0 0 1207.8 225.6;" xml:space="preserve">
@@ -74,7 +74,7 @@
         </svg></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span><i class="fas fa-bars toggle-icon bar-icon"></i></span>
+        <span><i class="fas fa-bars toggle-icon border-0"></i></span>
       </button>
       <div class="collapse-lg navbar-color navbar-collapse ml-auto" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 link-res">
@@ -83,12 +83,12 @@
               data-bs-toggle="dropdown" aria-expanded="false">
               Courses<i class="fas fa-chevron-down ps-3 course-icon"></i>
             </a>
-            <ul class="dropdown-menu border-white me-auto ms-2" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item size-14 nav-drop-color pb-2" href="#">Android Development</a></li>
-              <li><a class="dropdown-item size-14 nav-drop-color pb-2" href="#">Frontend Development</a></li>
-              <li><a class="dropdown-item size-14 nav-drop-color pb-2" href="#">Data Science</a></li>
-              <li><a class="dropdown-item size-14 nav-drop-color pb-2" href="#">UI/UX Design</a></li>
-              <li><a class="dropdown-item size-14 nav-drop-color" href="#">Software Development</a></li>
+            <ul class="dropdown-menu me-auto ms-2" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item  nav-drop-color pb-2" href="#">Android Development</a></li>
+              <li><a class="dropdown-item  nav-drop-color pb-2" href="#">Frontend Development</a></li>
+              <li><a class="dropdown-item  nav-drop-color pb-2" href="#">Data Science</a></li>
+              <li><a class="dropdown-item  nav-drop-color pb-2" href="#">UI/UX Design</a></li>
+              <li><a class="dropdown-item  nav-drop-color" href="#">Software Development</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown hide-link">
@@ -97,9 +97,9 @@
               For Employers<i class="fas fa-chevron-down ps-3 course-icon2"></i>
             </a>
             <ul class="dropdown-menu border-white ms-4" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item size-14 nav-drop-color pb-2" href="#">Hire Stutern Trained Graduates</a></li>
-              <li><a class="dropdown-item size-14 nav-drop-color pb-2" href="#">Hire from wide pool</a></li>
-              <li><a class="dropdown-item size-14 nav-drop-color" href="#">Post a Job</a></li>
+              <li><a class="dropdown-item  nav-drop-color pb-2" href="#">Hire Stutern Trained Graduates</a></li>
+              <li><a class="dropdown-item  nav-drop-color pb-2" href="#">Hire from wide pool</a></li>
+              <li><a class="dropdown-item  nav-drop-color" href="#">Post a Job</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown hide-link">
@@ -108,8 +108,8 @@
               For Talents<i class="fas fa-chevron-down ps-3 course-icon3"></i>
             </a>
             <ul class="dropdown-menu border-white ms-4" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item size-14 nav-drop-color pb-2" href="#">Take a course</a></li>
-              <li><a class="dropdown-item size-14 nav-drop-color" href="#">Apply to a Job</a></li>
+              <li><a class="dropdown-item  nav-drop-color pb-2" href="#">Take a course</a></li>
+              <li><a class="dropdown-item  nav-drop-color" href="#">Apply to a Job</a></li>
             </ul>
           </li>
           <li class="nav-item log-in">
@@ -117,7 +117,8 @@
           </li>
           </li>
           <li class="nav-item">
-            <a class="btn btn-secondary course-btn-bg dark-blue ms-lg-2 ms-5 me-4 px-4 py-2" href="accelerator.html">Take a course</a>
+            <a class="btn btn-secondary course-btn-bg dark-blue ms-lg-2 ms-5 me-4 px-4 py-2"
+              href="accelerator.html">Take a course</a>
           </li>
         </ul>
       </div>
@@ -125,11 +126,11 @@
   </nav>
 
   <main>
-    <section class="intro d-flex align-content-center flex-wrap app-text-color px-lg-5 py-5 mb-sm-5 ">
+    <section class="intro app-text-color px-lg-5 py-5 mb-lg-5 mb-sm-5">
       <section class="container-fluid mx-lg-5 px-lg-5 pt-5 mt-5">
         <div class="row pt-5 mt-5">
           <div class="col-lg-8 col-12 px-0">
-            <h1 class="fw-bold pb-3 px-sm-5">Get the skills you need for the job you want</h1>
+            <h1 class="fw-bold pb-3 ms-sm-5">Get the skills you need for the job you want</h1>
             <p class="fs-5 fw-light pb-2 mx-lg-1 me-lg-5 mb-lg-4 mb-sm-5 px-sm-5" style="max-width: 40rem">Stutern is a
               skills development and job placement platform that trains and connects young African talents with
               long-term employment.</p>
@@ -144,31 +145,41 @@
       </section>
     </section>
 
-    <section class="about mb-lg-1 mb-sm-5 d-flex align-content-center flex-wrap">
-      <section class="container-fluid about d-flex align-content-center flex-wrap mx-lg-5  pe-lg-0">
-        <div class="row d-flex align-content-center flex-wrap mx-lg-5 px-lg-4">
-          <div
-            class="col-lg-5 col-md-5 col-sm-12 card me-lg-5 ms-lg-0 ms-sm-3 text-dark border-white my-2 px-3 pt-sm-5 d-flex align-content-center flex-wrap justify-content-center">
-            <h2 class="sub-header font-weight-600 blue-color mx-sm-4">Be employable in 4 <span
-                style="text-decoration:line-through">years</span> <span style="color: #1bd3c6">months</span> </h2>
-            <p class="card-text blue-color fs-5 fw-light pe-lg-4 me-lg-1 mx-sm-4 pb-sm-5 mb-sm-5">Join the Stutern
-              Graduate Accelerator - an immersive program that gives you the head start to get a job in tech. With the
-              right mentors, peer-to-peer critiques, and challenging projects, any skill can be mastered.</p>
+    <section class="mb-3 py-lg-5">
+      <section class="container-fluid py-lg-5">
+        <div class="row d-flex justify-content-center">
+          <div class="col-lg-5 col-md-6 col-sm-12 text-dark me-lg-5 mb-sm-5">
+            <div class="card border-0">
+              <div class="card-body">
+                <h2 class="card-title sub-header font-weight-600 blue-color px-lg-5 ps-md-3 px-sm-3">Be employable in 4
+                  <span style="text-decoration:line-through">years</span> <span style="color: #1bd3c6">months</span>
+                </h2>
+                <p class="card-text blue-color fs-5 fw-light px-lg-5 px-sm-3">Join the Stutern
+                  Graduate Accelerator - an immersive program that gives you the head start to get a job in tech. With
+                  the
+                  right mentors, peer-to-peer critiques, and challenging projects, any skill can be mastered.</p>
+
+              </div>
+            </div>
           </div>
-          <div class="card border-white pe-0 ms-lg-5 col-lg-6 col-md-5 col-sm-12 ps-lg-5 ms-sm-0 ps-sm-0">
-            <img src="https://stutern.com/images/others/home-section.png" class="card-img-top ms-lg-5 ps-lg-5 mx-sm-4"
-              alt="images of alumni">
+          <div class="col-lg-5 col-md-6 col-sm-12 ms-lg-5">
+            <div class="card border-0">
+              <div class="card-body">
+                <img src="https://stutern.com/images/others/home-section.png"
+                  class="card-img-top col-lg-6 col-md-6 col-sm-12" alt="an image of a lady presenting">
+              </div>
+            </div>
           </div>
-        </div>
       </section>
     </section>
 
+
     <section class="container-fluid about-text pt-5">
       <div class="row d-flex align-content-center flex-wrap justify-content-center">
-        <div class="col-lg-10 col-sm-11 mb-3 text-center">
-          <h2 class="sub-header font-weight-600 mb-4 mx-sm-5 px-sm-5">We made it believable<br>
+        <div class="col-lg-10 col-sm-9 mb-3 text-center">
+          <h2 class="sub-header font-weight-600 mb-4 text-center alumni-head">We made it believable<br>
             They made it real</h2>
-          <p class="blue-color fs-4 fw-light mx-sm-4 px-sm-3 mb-sm-5">Stutern has helped many young talents launch new
+          <p class="blue-color fs-4 fw-light mb-sm-5">Stutern has helped many young talents launch new
             and promising careers.</p>
         </div>
       </div>
