--- a/accelerator.html
+++ b/accelerator.html
@@ -126,7 +126,7 @@
           </li>
           </li>
           <li class="nav-item">
-            <a class="btn btn-primary course-btn-bg dark-blue ms-lg-2 ms-5 me-lg-4 me-sm-4 px-4 py-2" href="#">Take a
+            <a class="btn course-btn-bg dark-blue ms-lg-2 ms-5 me-lg-4 me-sm-4 px-4 py-2" style="border: 3px solid rgb(26, 200, 187, 0.8)" href="#">Take a
               course</a>
           </li>
         </ul>
@@ -135,16 +135,16 @@
   </nav>
 
   <main>
-    <section class="intro d-flex align-content-center flex-wrap app-text-color pt-5">
+    <section class="intro d-flex align-content-center flex-wrap white-color pt-5">
       <section class="container pt-5">
         <div class="row d-flex justify-content-center">
           <div class="col-lg-9 col-12 text-center px-0">
             <p class="pb-2">STUTERN ACCELERATOR</p>
-            <h1 class="fw-bold pb-3 px-lg-4">In-demand skills for your technology career</h1>
-            <p class="fs-6 pb-2 px-lg-4 mx-lg-1">Set yourself up for success by registering for any of our curated
+            <h1 class="fw-bold pb-3 px-lg-5 mx-lg-5">In-demand skills for your technology career</h1>
+            <p class="fs-6 pb-2 px-lg-5 mx-lg-5">Set yourself up for success by registering for any of our curated
               training courses. We will
               provide you with the right mentorship, tools and content to upskill yourself.</p>
-            <a href="#courses-section"> <button type="button" class="btn btn-primary course-btn-bg dark-blue btn-lg">View our
+            <a href="#courses-section"> <button type="button" class="btn  course-btn-bg dark-blue btn-lg">View our
                 Courses</button></a>
           </div>
         </div>
@@ -266,7 +266,7 @@
               style="width: 48px;">
             <div class="card-body px-0">
               <h2 class="card-title fs-5 font-weight-600 app-header-color mb-4">Apply for free</h2>
-              <p class="card-text fs-6 app-text-color">We look forward to learning about you through your application.
+              <p class="card-text fs-6 white-color ">We look forward to learning about you through your application.
                 Join thousands
                 of ambitious young talents by telling us about your interest, motivation, and goals.</p>
             </div>
@@ -276,7 +276,7 @@
               style="width: 48px;">
             <div class="card-body px-1">
               <h2 class="card-title fs-5 font-weight-600 app-header-color mb-4">Submit task</h2>
-              <p class="card-text fs-6 app-text-color">Complete our take-home task. This tests your learning skills
+              <p class="card-text fs-6 white-color">Complete our take-home task. This tests your learning skills
                 while giving you
                 a chance to learn what it takes to join the programme. You will also submit written and recorded video
                 responses to questions.</p>
@@ -287,7 +287,7 @@
               style="width: 48px;">
             <div class="card-body px-0">
               <h2 class="card-title fs-5 font-weight-600 app-header-color mb-4">Get admitted</h2>
-              <p class="card-text fs-6 app-text-color">Receive an admission offer and reserve your spot in the program.
+              <p class="card-text fs-6 white-color">Receive an admission offer and reserve your spot in the program.
                 You will
                 complete the required KYC procedures and decide on a payment option.</p>
             </div>
@@ -297,7 +297,7 @@
               style="width: 48px;">
             <div class="card-body px-0">
               <h2 class="card-title fs-5 font-weight-600 app-header-color mb-4">Start classes</h2>
-              <p class="card-text fs-6 app-text-color">Attend your first class, partake in group projects, and 1:1
+              <p class="card-text fs-6 white-color ">Attend your first class, partake in group projects, and 1:1
                 sessions.
                 Afterward, you will be prepared for job hunting. Our team will keep an eye on your growth even while
                 on the job.</p>
