--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
             </ul>
           </li>
           <li class="nav-item log-in">
-            <a class="btn  ms-lg-5 px-4 py-2 me-sm-3 log-in-btn" href="#">Log in</a>
+            <a class="btn ms-lg-5 px-4 py-2 me-sm-3 log-in-btn border-dark btn-outline-light" href="#">Log in</a>
           </li>
           </li>
           <li class="nav-item">
-            <a class="btn btn-secondary course-btn-bg dark-blue ms-lg-2 ms-5 me-4 px-4 py-2"
+            <a class="btn course-btn-bg dark-blue ms-lg-2 ms-5 me-4 px-4 py-2 btn-outline-light" style="border: 3px solid rgb(26, 200, 187, 0.8)"
               href="accelerator.html">Take a course</a>
           </li>
         </ul>
@@ -143,7 +143,7 @@
               skills development and job placement platform that trains and connects young African talents with
               long-term employment.</p>
             <a href="accelerator.html"> <button type="button"
-                class="btn btn-outline-secondary course-btn-bg dark-blue btn-lg fs-4 px-4 py-3 mx-sm-5">Take a
+                class="btn btn-outline-light course-btn-bg dark-blue btn-lg fs-4 px-4 py-3 mx-sm-5">Take a
                 course</button></a>
           </div>
 
